--- a/_posts/2020-4-7-Nacos多配置文件加载与共享配置.md
+++ b/_posts/2020-4-7-Nacos多配置文件加载与共享配置.md
@@ -18,22 +18,22 @@ tags: SpringCloudAlibaba Nacos
 spring.cloud.nacos.config.prefix
 spring.cloud.nacos.config.file-extension
 spring.cloud.nacos.config.group
-默认情况下，会加载 $\color{red}{DataID=$\{spring.application.name\}.properties，Group=DEFAULT\_GROUP}$的配置。
+默认情况下，会加载 `DataID=${spring.application.name}.properties，Group=DEFAULT_GROUP`的配置。
 假设现在有这样一个需求：我们想对所有应用的Actutor模块以及日志输出做统一的配置管理。所以，我们希望可以将Actuator模块的配置放在独立的配置文件 log.properties文件中。通过拆分这个两类配置内容，希望可以做到配置的共享加载与统一管理。
 
 这里，我们在默认Namespace Public下完成这个实验，当然你也可以在我们之前建立的 DEV 、 TEST 的Namespace下完成。
 
 ***第一步：***
 
-在Nacos中创建 $\color{red}{Data ID=actuator.properties，Group=DEFAULT\_GROUP}$和$\color{red}{Data ID=log.properties，Group=DEFAULT\_GROUP}$的配置内容。
+在Nacos中创建 `Data ID=actuator.properties，Group=DEFAULT_GROUP`和`Data ID=log.properties，Group=DEFAULT_GROUP`的配置内容。
 
-<div style="width:1066;height:401;margin:50px auto">
-    <img alt="nacos.webp" src="/images/nacos.webp" width="1066" height="401"/>
+<div style="width:773px;height:301px;margin:50px auto">
+    <img alt="nacos.webp" src="/images/nacos.webp" width="773" height="301"/>
 </div>
 
 ***第二步：***
 
-在Spring Cloud应用中通过使用$\color{red}{spring.cloud.nacos.config.ext-config}$参数配置来加载这两个配置内容：
+在Spring Cloud应用中通过使用`spring.cloud.nacos.config.ext-config`参数配置来加载这两个配置内容：
 
 ````
 # actuator.properties
@@ -46,7 +46,7 @@ spring.cloud.nacos.config.ext-config[1].group=DEFAULT_GROUP
 spring.cloud.nacos.config.ext-config[1].refresh=true
 ````
 
-可以看到，$\color{red}{spring.cloud.nacos.config.ext-confi}$配置是一个数组List类型。每组配置都包含三个参数：dataId、group、refresh;
+可以看到，`spring.cloud.nacos.config.ext-confi`配置是一个数组List类型。每组配置都包含三个参数：dataId、group、refresh;
 这里需要说明的是 refresh 参数，它主要用来控制配置文件的内容支持自动刷新，默认情况下，只有默认的配置项（alibaba-nacos-config-client.properties）才会自动刷新，对于这些扩展的配置项，如果需要实时刷新配置，这个参数必须加上。
 
 **共享配置**
@@ -70,9 +70,9 @@ spring.cloud.nacos.config.refreshable-dataids=actuator.properties,log.properties
 
 在使用Nacos配置的时候，只要有以下三类配置：
 
-- A：通过$\color{red}{spring.cloud.nacos.config.shared-dataids}$定义的共享配置
-- B：通过$\color{red}{spring.cloud.nacos.config.ext-config[n]}$定义的加载配置
-- C：通过内部规则（$\color{red}{spring.cloud.nacos.config.prefix}$、$\color{red}{spring.cloud.nacos.config.file-extension}$、$\color{red}{spring.cloud.nacos.config.group}$这几个参数）拼接出来的配置
+- A：通过`spring.cloud.nacos.config.shared-dataids`定义的共享配置
+- B：通过`spring.cloud.nacos.config.ext-config[n]`定义的加载配置
+- C：通过内部规则（`spring.cloud.nacos.config.prefix`、`spring.cloud.nacos.config.file-extension`、`spring.cloud.nacos.config.group`这几个参数）拼接出来的配置
 想用弄清楚这个几个配置的优先级，我们做一个简单的实验,从实验日志中我们可以很清晰的看到结果：
 
 ````
@@ -96,7 +96,7 @@ spring.cloud.nacos.config.ext-config[0].refresh=true
 2019-07-11 15:26:28.834  INFO 2224 --- [-localhost_8848] o.s.c.a.n.c.NacosPropertySourceBuilder   : Loading nacos data, dataId: 'alibaba-nacos-config-client.properties', group: 'DEFAULT_GROUP'
 ````
 
-实验证明后面加载的配置内容会覆盖之前的配置，所以优先级关系：$\color{red}{C > B > A}$
+实验证明后面加载的配置内容会覆盖之前的配置，所以优先级关系：`C > B > A`
 
 `注：这里的优先级和配置代码书写前后位置无关，同学们不要被误导了！`
 
