--- a/_posts/2018-4-25-html页面使用自定义模板.md
+++ b/_posts/2018-4-25-html页面使用自定义模板.md
@@ -3,7 +3,7 @@ layout: post
 title: "html页面使用自定义模板"
 date: 2018-4-24 
 categories: 前端
-tags: HTML JS 
+tags: html js 
 --- 
 
 通常利用js调用ajax返回数据并操作dom模型时往往需要拼装字符串，当拼接的字符串较长时这样代码的可读性及可操作性不高。那么我们此时可以自定义模板，从而提高可读性。
