--- a/_posts/2020-5-21-滑动时间窗口限流算法.md
+++ b/_posts/2020-5-21-滑动时间窗口限流算法.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "服务器端限流(滑动时间窗口算法)"
+title: "滑动时间窗口限流算法"
 date: 2020-5-21 
 categories: 后端
 tags: Redis 限流 
@@ -13,8 +13,8 @@ tags: Redis 限流
 
 滑动时间窗口如下图所示：
 
-<div style="width:800px;height:400px;margin:50px auto">
-    <img alt="nacos-config.png" src="/images/640.webp" width="800" height="400"/>
+<div style="width:800px;height:300px;margin:50px auto">
+    <img alt="nacos-config.png" src="/images/640.webp" width="800" height="300"/>
 </div>
 
 其中每一小个表示 10s，被红色虚线包围的时间段则为需要判断的时间间隔，比如 60s 秒允许 100 次请求，那么红色虚线部分则为 60s。
