--- a/_posts/2020-5-21-滑动时间窗口限流算法.md
+++ b/_posts/2020-5-21-滑动时间窗口限流算法.md
@@ -12,8 +12,8 @@ tags: Redis 限流
 
 滑动时间窗口如下图所示：
 
-<div style="width:430px;height:500px;margin:50px auto">
-    <img alt="nacos-config.png" src="/images/640.webp" width="430" height="500"/>
+<div style="width:800px;height:300px;margin:50px auto">
+    <img alt="640.webp" src="/images/640.webp" width="800" height="300"/>
 </div>
 
 其中每一小个表示 10s，被红色虚线包围的时间段则为需要判断的时间间隔，比如 60s 秒允许 100 次请求，那么红色虚线部分则为 60s。
