--- a/_posts/2020-5-21-漏桶算法-限流.md
+++ b/_posts/2020-5-21-漏桶算法-限流.md
@@ -27,14 +27,14 @@ tags: Java Redis 限流
 `Redis-Cell` 实现限流的方法也很简单，只需要使用一条指令 `cl.throttle` 即可，使用示例如下：
 
 
-````
+```shell
 > cl.throttle mylimit 15 30 60
 1）（integer）0 # 0 表示获取成功，1 表示拒绝
 2）（integer）15 # 漏斗容量
 3）（integer）14 # 漏斗剩余容量
 4）（integer）-1 # 被拒绝之后，多长时间之后再试（单位：秒）-1 表示无需重试
 5）（integer）2 # 多久之后漏斗完全空出来
-````
+```
 
 其中 15 为漏斗的容量，30 / 60s 为漏斗的速率。
 
@@ -44,7 +44,7 @@ tags: Java Redis 限流
 
 pom.xml配置依赖如下：
 
-````
+```xml
 <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -53,11 +53,11 @@ pom.xml配置依赖如下：
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-test</artifactId>
 </dependency>
-````
+```
 
 具体的 Java 实现代码如下：
 
-````
+```java
 @Slf4j
 @Component
 public class ApiLimiter {
@@ -96,9 +96,9 @@ public class ApiLimiter {
         }
     }
 }
-````
+```
 
-````
+```java
 @RunWith(SpringRunner.class)
 @SpringBootTest
 public class ApiLimitTest {
@@ -134,4 +134,4 @@ public class ApiLimitTest {
         }
     }
 }
-````
+```
