--- a/_posts/2020-5-21-漏桶算法-限流.md
+++ b/_posts/2020-5-21-漏桶算法-限流.md
@@ -29,11 +29,11 @@ tags: Java Redis 限流
 
 ```shell
 > cl.throttle mylimit 15 30 60
-1）（integer）0 # 0 表示获取成功，1 表示拒绝
-2）（integer）15 # 漏斗容量
-3）（integer）14 # 漏斗剩余容量
-4）（integer）-1 # 被拒绝之后，多长时间之后再试（单位：秒）-1 表示无需重试
-5）（integer）2 # 多久之后漏斗完全空出来
+1) (integer) 0 # 0 表示获取成功，1 表示拒绝
+2) (integer) 15 # 漏斗容量
+3) (integer) 14 # 漏斗剩余容量
+4) (integer) -1 # 被拒绝之后，多长时间之后再试（单位：秒）-1 表示无需重试
+5) (integer) 2 # 多久之后漏斗完全空出来
 ```
 
 其中 15 为漏斗的容量，30 / 60s 为漏斗的速率。
