--- a/_posts/2020-5-21-令牌桶算法-限流.md
+++ b/_posts/2020-5-21-令牌桶算法-限流.md
@@ -16,17 +16,17 @@ tags: Java 限流
 
 我们可以使用 Google 开源的 guava 包，很方便的实现令牌桶算法，首先在 pom.xml 添加 guava 引用，配置如下：
 
-````
+```xml
 <dependency>
     <groupId>com.google.guava</groupId>
     <artifactId>guava</artifactId>
     <version>28.2-jre</version>
 </dependency>
-````
+```
 
 具体实现代码如下：
 
-````
+```java
 /**
  * Guava 实现限流
  */
@@ -43,7 +43,7 @@ public class RateLimiterExample {
         }
     }
 }
-````
+```
 
 以上程序的执行结果为：
 
