--- a/_posts/2020-5-21-滑动时间窗口算法-限流.md
+++ b/_posts/2020-5-21-滑动时间窗口算法-限流.md
@@ -23,19 +23,19 @@ tags: Java Redis 限流
 我们借助 Jedis 包来操作 Redis，实现在 pom.xml 添加 Jedis 框架的引用，配置如下：
 
 
-````
+```xml
 <dependency>
     <groupId>redis.clients</groupId>
     <artifactId>jedis</artifactId>
     <version>3.3.0</version>
 </dependency>
 
-````
+```
 
 具体的 Java 实现代码如下：
 
 
-````
+```java
 import redis.clients.jedis.Jedis;
 
 public class RedisLimit {
@@ -83,11 +83,11 @@ public class RedisLimit {
         return true;
     }
 }
-````
+```
 
 以上程序的执行结果为：
 
-````
+```
 正常执行请求：0
 
 正常执行请求：1
@@ -119,7 +119,7 @@ public class RedisLimit {
 被限流：14
 
 休眠后，正常执行请求
-````
+```
 
 此实现方式存在的缺点有两个：
 
