--- a/_posts/2020-4-7-Nacos多配置文件加载与共享配置.md
+++ b/_posts/2020-4-7-Nacos多配置文件加载与共享配置.md
@@ -35,7 +35,7 @@ spring.cloud.nacos.config.group
 
 在Spring Cloud应用中通过使用`spring.cloud.nacos.config.ext-config`参数配置来加载这两个配置内容：
 
-````
+```properties
 # actuator.properties
 spring.cloud.nacos.config.ext-config[0].dataId=actuator.properties
 spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
@@ -44,7 +44,7 @@ spring.cloud.nacos.config.ext-config[0].refresh=true
 spring.cloud.nacos.config.ext-config[1].dataId=log.properties
 spring.cloud.nacos.config.ext-config[1].group=DEFAULT_GROUP
 spring.cloud.nacos.config.ext-config[1].refresh=true
-````
+```
 
 可以看到，`spring.cloud.nacos.config.ext-confi`配置是一个数组List类型。每组配置都包含三个参数：dataId、group、refresh;
 这里需要说明的是 refresh 参数，它主要用来控制配置文件的内容支持自动刷新，默认情况下，只有默认的配置项（alibaba-nacos-config-client.properties）才会自动刷新，对于这些扩展的配置项，如果需要实时刷新配置，这个参数必须加上。
@@ -53,13 +53,13 @@ spring.cloud.nacos.config.ext-config[1].refresh=true
 
 通过上面的加载多个配置的实现，实际上我们已经可以实现不同应用的共享配置了（当然，不同的Namespace是相互隔离的）。而Nacos除了上面这种配置方式外，还提过了了另一种更加简便的配置方式：下面的方式和上面的效果是等价的：
 
-````
+```properties
 # 配置多个共享的 Data ID
 spring.cloud.nacos.config.shared-dataids=actuator.properties,log.properties
 
 # 指定需要自动刷新的Data ID
 spring.cloud.nacos.config.refreshable-dataids=actuator.properties,log.properties
-````
+```
 
 - spring.cloud.nacos.config.shared-dataids 参数用来配置多个共享配置的 Data ID,多个的时候使用逗号分隔
 - spring.cloud.nacos.config.refreshable-dataids 参数用来定义那些共享配置的 Data ID在配置变化时，应用中可以动态刷新，多个 Data ID之间用逗号隔开。如果没有明确配置，默认情况下所有共享配置都不支持动态刷新。
@@ -75,7 +75,7 @@ spring.cloud.nacos.config.refreshable-dataids=actuator.properties,log.properties
 - C：通过内部规则（`spring.cloud.nacos.config.prefix`、`spring.cloud.nacos.config.file-extension`、`spring.cloud.nacos.config.group`这几个参数）拼接出来的配置
 想用弄清楚这个几个配置的优先级，我们做一个简单的实验,从实验日志中我们可以很清晰的看到结果：
 
-````
+```properties
 # A 类
 spring.cloud.nacos.config.shared-dataids=log.properties
 spring.cloud.nacos.config.refreshable-dataids=log.properties
@@ -86,7 +86,7 @@ spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.ext-config[0].refresh=true
 
 # C 类 我们这里省略，系统默认会自动配置
-````
+```
 
 根据上面的配置，应用分别会去加载三类不同的配置文件，启动应用的时候，将会在日志中看到如下输出：
 
