--- a/_posts/2018-4-25-html页面使用自定义模板.md
+++ b/_posts/2018-4-25-html页面使用自定义模板.md
@@ -10,7 +10,7 @@ tags: html js
 
 ### 定义模板
 
-```
+```html
 <template id="userLT" style="display:none">
 	<tr>
 		<td><input type="checkbox" value="{id}"/></td>
@@ -29,7 +29,7 @@ tags: html js
 
 ### 自定义插件template.js
 
-```
+```javascript
 var options = {};
 
 $.extend({
@@ -134,7 +134,7 @@ $.extend({
 
 ### 自定义函数
 
-```
+```js
 
 /**
  * @param cellData 单元数据
@@ -170,7 +170,7 @@ function funA(cellData,rowData){
 ### 替换数据
 
 
-```
+```js
 
 
 function initData(pageNum) {
