--- a/_posts/2019-10-8-纯手写一个简单的HashMap.md
+++ b/_posts/2019-10-8-纯手写一个简单的HashMap.md
@@ -14,7 +14,7 @@ tags: Java
 </div>
 
 **创建XMap接口如下**
-````
+```java
 package com.mk.map;
 
 /**
@@ -41,10 +41,10 @@ public interface XMap<K,V> {
         v getValue();
     }
 }
-````
+```
 
 **创建XHashMap实现类如下**
-````
+```java
 package com.mk.map;
 
 public class XHashMap implements XMap {
@@ -191,10 +191,10 @@ public class XHashMap implements XMap {
         }
     }
 }
-````
+```
 
 **创建测试类TestMap如下**
-````
+```java
 package com.mk.map;
 
 public class TestMap {
@@ -210,7 +210,7 @@ public class TestMap {
         System.out.println(map.get("a1"));
     }
 }
-````
+```
 
 **运行结果如下**
 <div style="width:800px;height:480px;margin:50px auto">
