修改文件编码格式

--- a/_posts/2020-6-1-Docker安装与启动.md
+++ b/_posts/2020-6-1-Docker安装与启动.md
@@ -1,81 +1,81 @@
 ---
 layout: post
-title: "Docker°²×°ÓëÆô¶¯"
+title: "Dockerå®‰è£…ä¸å¯åŠ¨"
 date: 2020-6-1
-categories: ÔËÎ¬
+categories: è¿ç»´
 tags: Docker 
 --- 
 
-### °²×°Docker
-Docker¹Ù·½½¨ÒéÔÚUbuntuÖĞ°²×°£¬ÒòÎªDockerÊÇ»ùÓÚUbuntu·¢²¼µÄ£¬¶øÇÒÒ»°ãDocker³öÏÖµÄÎÊÌâUbuntuÊÇ×îÏÈ¸üĞÂ»òÕß´ò²¹¶¡µÄ¡£ÔÚºÜ¶à°æ±¾µÄCentOSÖĞÊÇ²»Ö§³Ö¸üĞÂ×îĞÂµÄÒ»Ğ©²¹¶¡°üµÄ¡£
+### å®‰è£…Docker
+Dockerå®˜æ–¹å»ºè®®åœ¨Ubuntuä¸­å®‰è£…ï¼Œå› ä¸ºDockeræ˜¯åŸºäºUbuntuå‘å¸ƒçš„ï¼Œè€Œä¸”ä¸€èˆ¬Dockerå‡ºç°çš„é—®é¢˜Ubuntuæ˜¯æœ€å…ˆæ›´æ–°æˆ–è€…æ‰“è¡¥ä¸çš„ã€‚åœ¨å¾ˆå¤šç‰ˆæœ¬çš„CentOSä¸­æ˜¯ä¸æ”¯æŒæ›´æ–°æœ€æ–°çš„ä¸€äº›è¡¥ä¸åŒ…çš„ã€‚
 
-ÓÉÓÚÎÒÃÇÑ§Ï°µÄ»·¾³¶¼Ê¹ÓÃµÄÊÇCentOS£¬Òò´ËÕâÀïÎÒÃÇ½«Docker°²×°µ½CentOSÉÏ¡£×¢Òâ£ºÕâÀï½¨Òé°²×°ÔÚCentOS7.xÒÔÉÏµÄ°æ±¾£¬ÔÚCentOS6.xµÄ°æ±¾ÖĞ£¬°²×°Ç°ĞèÒª°²×°ÆäËûºÜ¶àµÄ»·¾³¶øÇÒDockerºÜ¶à²¹¶¡²»Ö§³Ö¸üĞÂ¡£
+ç”±äºæˆ‘ä»¬å­¦ä¹ çš„ç¯å¢ƒéƒ½ä½¿ç”¨çš„æ˜¯CentOSï¼Œå› æ­¤è¿™é‡Œæˆ‘ä»¬å°†Dockerå®‰è£…åˆ°CentOSä¸Šã€‚æ³¨æ„ï¼šè¿™é‡Œå»ºè®®å®‰è£…åœ¨CentOS7.xä»¥ä¸Šçš„ç‰ˆæœ¬ï¼Œåœ¨CentOS6.xçš„ç‰ˆæœ¬ä¸­ï¼Œå®‰è£…å‰éœ€è¦å®‰è£…å…¶ä»–å¾ˆå¤šçš„ç¯å¢ƒè€Œä¸”Dockerå¾ˆå¤šè¡¥ä¸ä¸æ”¯æŒæ›´æ–°ã€‚
 
-ÇëÖ±½Ó¹ÒÔØ¿Î³ÌÅäÌ×µÄCentos7.x¾µÏñ
+è¯·ç›´æ¥æŒ‚è½½è¯¾ç¨‹é…å¥—çš„Centos7.xé•œåƒ
 
-£¨1£©yum °ü¸üĞÂµ½×îĞÂ
+ï¼ˆ1ï¼‰yum åŒ…æ›´æ–°åˆ°æœ€æ–°
 ```shell
 sudo yum update
 ```
-£¨2£©°²×°ĞèÒªµÄÈí¼ş°ü£¬ yum-util Ìá¹©yum-config-manager¹¦ÄÜ£¬ÁíÍâÁ½¸öÊÇdevicemapperÇı¶¯ÒÀÀµµÄ
+ï¼ˆ2ï¼‰å®‰è£…éœ€è¦çš„è½¯ä»¶åŒ…ï¼Œ yum-util æä¾›yum-config-manageråŠŸèƒ½ï¼Œå¦å¤–ä¸¤ä¸ªæ˜¯devicemapperé©±åŠ¨ä¾èµ–çš„
 ```shell
 sudo yum install -y yum-utils device-mapper-persistent-data lvm2
 ```
-£¨3£©ÉèÖÃyumÔ´Îª°¢ÀïÔÆ
+ï¼ˆ3ï¼‰è®¾ç½®yumæºä¸ºé˜¿é‡Œäº‘
 ```shell
 sudo yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
 ```
-£¨4£©°²×°docker
+ï¼ˆ4ï¼‰å®‰è£…docker
 ```shell
 sudo yum install docker-ce
 ```
-£¨5£©°²×°ºó²é¿´docker°æ±¾
+ï¼ˆ5ï¼‰å®‰è£…åæŸ¥çœ‹dockerç‰ˆæœ¬
 ```shell
 docker -v
 ```
-### ÉèÖÃustcµÄ¾µÏñ
-ustcÊÇÀÏÅÆµÄlinux¾µÏñ·şÎñÌá¹©ÕßÁË£¬»¹ÔÚÒ£Ô¶µÄubuntu 5.04°æ±¾µÄÊ±ºò¾ÍÔÚÓÃ¡£ustcµÄdocker¾µÏñ¼ÓËÙÆ÷ËÙ¶ÈºÜ¿ì¡£ustc docker mirrorµÄÓÅÊÆÖ®Ò»¾ÍÊÇ²»ĞèÒª×¢²á£¬ÊÇÕæÕıµÄ¹«¹²·şÎñ¡£
+### è®¾ç½®ustcçš„é•œåƒ
+ustcæ˜¯è€ç‰Œçš„linuxé•œåƒæœåŠ¡æä¾›è€…äº†ï¼Œè¿˜åœ¨é¥è¿œçš„ubuntu 5.04ç‰ˆæœ¬çš„æ—¶å€™å°±åœ¨ç”¨ã€‚ustcçš„dockeré•œåƒåŠ é€Ÿå™¨é€Ÿåº¦å¾ˆå¿«ã€‚ustc docker mirrorçš„ä¼˜åŠ¿ä¹‹ä¸€å°±æ˜¯ä¸éœ€è¦æ³¨å†Œï¼Œæ˜¯çœŸæ­£çš„å…¬å…±æœåŠ¡ã€‚
 ```
 https://lug.ustc.edu.cn/wiki/mirrors/help/docker
 ```
-±à¼­¸ÃÎÄ¼ş£º
+ç¼–è¾‘è¯¥æ–‡ä»¶ï¼š
 ```json
 vi /etc/docker/daemon.json
 ```
-ÔÚ¸ÃÎÄ¼şÖĞÊäÈëÈçÏÂÄÚÈİ£º
+åœ¨è¯¥æ–‡ä»¶ä¸­è¾“å…¥å¦‚ä¸‹å†…å®¹ï¼š
 ```shell
 {
 "registry-mirrors": ["https://docker.mirrors.ustc.edu.cn"]
 }
 ```
-### DockerµÄÆô¶¯ÓëÍ£Ö¹
-systemctlÃüÁîÊÇÏµÍ³·şÎñ¹ÜÀíÆ÷Ö¸Áî
+### Dockerçš„å¯åŠ¨ä¸åœæ­¢
+systemctlå‘½ä»¤æ˜¯ç³»ç»ŸæœåŠ¡ç®¡ç†å™¨æŒ‡ä»¤
 
-Æô¶¯docker£º
+å¯åŠ¨dockerï¼š
 ```shell
 systemctl start docker
 ```
-Í£Ö¹docker£º
+åœæ­¢dockerï¼š
 ```shell
 systemctl stop docker
 ```
-ÖØÆôdocker£º
+é‡å¯dockerï¼š
 ```shell
 systemctl restart docker
 ```
-²é¿´docker×´Ì¬£º
+æŸ¥çœ‹dockerçŠ¶æ€ï¼š
 ```shell
 systemctl status docker
 ```
-¿ª»úÆô¶¯£º
+å¼€æœºå¯åŠ¨ï¼š
 ```shell
 systemctl enable docker
 ```
-²é¿´docker¸ÅÒªĞÅÏ¢
+æŸ¥çœ‹dockeræ¦‚è¦ä¿¡æ¯
 ```shell
 docker info
 ```
-²é¿´docker°ïÖúÎÄµµ
+æŸ¥çœ‹dockerå¸®åŠ©æ–‡æ¡£
 ```shell
 docker --help
 ```
