--- a/_posts/2020-6-1-Docker常用命令.md
+++ b/_posts/2020-6-1-Docker常用命令.md
@@ -1,157 +1,157 @@
 ---
 layout: post
-title: "Docker³£ÓÃÃüÁî"
+title: "Dockerå¸¸ç”¨å‘½ä»¤"
 date: 2020-6-1
-categories: ÔËÎ¬
+categories: è¿ç»´
 tags: Docker 
 --- 
 
-## ¾µÏñÏà¹ØÃüÁî
-### ²é¿´¾µÏñ
+## é•œåƒç›¸å…³å‘½ä»¤
+### æŸ¥çœ‹é•œåƒ
 ```
 docker images
 ```
-REPOSITORY£º¾µÏñÃû³Æ
+REPOSITORYï¼šé•œåƒåç§°
 
-TAG£º¾µÏñ±êÇ©
+TAGï¼šé•œåƒæ ‡ç­¾
 
-IMAGE ID£º¾µÏñID
+IMAGE IDï¼šé•œåƒID
 
-CREATED£º¾µÏñµÄ´´½¨ÈÕÆÚ£¨²»ÊÇ»ñÈ¡¸Ã¾µÏñµÄÈÕÆÚ£©
+CREATEDï¼šé•œåƒçš„åˆ›å»ºæ—¥æœŸï¼ˆä¸æ˜¯èŽ·å–è¯¥é•œåƒçš„æ—¥æœŸï¼‰
 
-SIZE£º¾µÏñ´óÐ¡
+SIZEï¼šé•œåƒå¤§å°
 
-ÕâÐ©¾µÏñ¶¼ÊÇ´æ´¢ÔÚDockerËÞÖ÷»úµÄ/var/lib/dockerÄ¿Â¼ÏÂ
+è¿™äº›é•œåƒéƒ½æ˜¯å­˜å‚¨åœ¨Dockerå®¿ä¸»æœºçš„/var/lib/dockerç›®å½•ä¸‹
 
-### ËÑË÷¾µÏñ
-Èç¹ûÄãÐèÒª´ÓÍøÂçÖÐ²éÕÒÐèÒªµÄ¾µÏñ£¬¿ÉÒÔÍ¨¹ýÒÔÏÂÃüÁîËÑË÷
+### æœç´¢é•œåƒ
+å¦‚æžœä½ éœ€è¦ä»Žç½‘ç»œä¸­æŸ¥æ‰¾éœ€è¦çš„é•œåƒï¼Œå¯ä»¥é€šè¿‡ä»¥ä¸‹å‘½ä»¤æœç´¢
 ```
-docker search ¾µÏñÃû³Æ
+docker search é•œåƒåç§°
 ```
-NAME£º²Ö¿âÃû³Æ
+NAMEï¼šä»“åº“åç§°
 
-DESCRIPTION£º¾µÏñÃèÊö
+DESCRIPTIONï¼šé•œåƒæè¿°
 
-STARS£ºÓÃ»§ÆÀ¼Û£¬·´Ó¦Ò»¸ö¾µÏñµÄÊÜ»¶Ó­³Ì¶È
+STARSï¼šç”¨æˆ·è¯„ä»·ï¼Œååº”ä¸€ä¸ªé•œåƒçš„å—æ¬¢è¿Žç¨‹åº¦
 
-OFFICIAL£ºÊÇ·ñ¹Ù·½
+OFFICIALï¼šæ˜¯å¦å®˜æ–¹
 
-AUTOMATED£º×Ô¶¯¹¹½¨£¬±íÊ¾¸Ã¾µÏñÓÉDocker Hub×Ô¶¯¹¹½¨Á÷³Ì´´½¨µÄ
+AUTOMATEDï¼šè‡ªåŠ¨æž„å»ºï¼Œè¡¨ç¤ºè¯¥é•œåƒç”±Docker Hubè‡ªåŠ¨æž„å»ºæµç¨‹åˆ›å»ºçš„
 
-### À­È¡¾µÏñ
-À­È¡¾µÏñ¾ÍÊÇ´ÓÖÐÑë²Ö¿âÖÐÏÂÔØ¾µÏñµ½±¾µØ
+### æ‹‰å–é•œåƒ
+æ‹‰å–é•œåƒå°±æ˜¯ä»Žä¸­å¤®ä»“åº“ä¸­ä¸‹è½½é•œåƒåˆ°æœ¬åœ°
 ```
-docker pull ¾µÏñÃû³Æ
+docker pull é•œåƒåç§°
 ```
-ÀýÈç£¬ÎÒÒªÏÂÔØcentos7¾µÏñ
+ä¾‹å¦‚ï¼Œæˆ‘è¦ä¸‹è½½centos7é•œåƒ
 ```
 docker pull centos:7
 ```
-### É¾³ý¾µÏñ
-°´¾µÏñIDÉ¾³ý¾µÏñ
+### åˆ é™¤é•œåƒ
+æŒ‰é•œåƒIDåˆ é™¤é•œåƒ
 ```
-docker rmi ¾µÏñID
+docker rmi é•œåƒID
 ```
-É¾³ýËùÓÐ¾µÏñ
+åˆ é™¤æ‰€æœ‰é•œåƒ
 ```
 docker rmi `docker images -q`
 ```
-## ÈÝÆ÷Ïà¹ØÃüÁî
-### ²é¿´ÈÝÆ÷
-²é¿´ÕýÔÚÔËÐÐµÄÈÝÆ÷
+## å®¹å™¨ç›¸å…³å‘½ä»¤
+### æŸ¥çœ‹å®¹å™¨
+æŸ¥çœ‹æ­£åœ¨è¿è¡Œçš„å®¹å™¨
 ```
 docker ps
 ```
-²é¿´ËùÓÐÈÝÆ÷
+æŸ¥çœ‹æ‰€æœ‰å®¹å™¨
 ```
-docker ps ¨Ca
+docker ps â€“a
 ```
-²é¿´×îºóÒ»´ÎÔËÐÐµÄÈÝÆ÷
+æŸ¥çœ‹æœ€åŽä¸€æ¬¡è¿è¡Œçš„å®¹å™¨
 ```
-docker ps ¨Cl
+docker ps â€“l
 ```
-²é¿´Í£Ö¹µÄÈÝÆ÷
+æŸ¥çœ‹åœæ­¢çš„å®¹å™¨
 ```
 docker ps -f status=exited
 ```
-### ´´½¨ÓëÆô¶¯ÈÝÆ÷
-´´½¨ÈÝÆ÷³£ÓÃµÄ²ÎÊýËµÃ÷£º
+### åˆ›å»ºä¸Žå¯åŠ¨å®¹å™¨
+åˆ›å»ºå®¹å™¨å¸¸ç”¨çš„å‚æ•°è¯´æ˜Žï¼š
 
-´´½¨ÈÝÆ÷ÃüÁî£º`docker run`
+åˆ›å»ºå®¹å™¨å‘½ä»¤ï¼š`docker run`
 
--i£º±íÊ¾ÔËÐÐÈÝÆ÷
+-iï¼šè¡¨ç¤ºè¿è¡Œå®¹å™¨
 
--t£º±íÊ¾ÈÝÆ÷Æô¶¯ºó»á½øÈëÆäÃüÁîÐÐ¡£¼ÓÈëÕâÁ½¸ö²ÎÊýºó£¬ÈÝÆ÷´´½¨¾ÍÄÜµÇÂ¼½øÈ¥¡£¼´·ÖÅäÒ»¸öÎ±ÖÕ¶Ë¡£
+-tï¼šè¡¨ç¤ºå®¹å™¨å¯åŠ¨åŽä¼šè¿›å…¥å…¶å‘½ä»¤è¡Œã€‚åŠ å…¥è¿™ä¸¤ä¸ªå‚æ•°åŽï¼Œå®¹å™¨åˆ›å»ºå°±èƒ½ç™»å½•è¿›åŽ»ã€‚å³åˆ†é…ä¸€ä¸ªä¼ªç»ˆç«¯ã€‚
 
-¨Cname :Îª´´½¨µÄÈÝÆ÷ÃüÃû¡£
+â€“name :ä¸ºåˆ›å»ºçš„å®¹å™¨å‘½åã€‚
 
--v£º±íÊ¾Ä¿Â¼Ó³Éä¹ØÏµ£¨Ç°ÕßÊÇËÞÖ÷»úÄ¿Â¼£¬ºóÕßÊÇÓ³Éäµ½ËÞÖ÷»úÉÏµÄÄ¿Â¼£©£¬¿ÉÒÔÊ¹ÓÃ¶à¸ö£­v×ö¶à¸öÄ¿Â¼»òÎÄ¼þÓ³Éä¡£×¢Òâ£º×îºÃ×öÄ¿Â¼Ó³Éä£¬ÔÚËÞÖ÷»úÉÏ×öÐÞ¸Ä£¬È»ºó¹²Ïíµ½ÈÝÆ÷ÉÏ¡£
+-vï¼šè¡¨ç¤ºç›®å½•æ˜ å°„å…³ç³»ï¼ˆå‰è€…æ˜¯å®¿ä¸»æœºç›®å½•ï¼ŒåŽè€…æ˜¯æ˜ å°„åˆ°å®¿ä¸»æœºä¸Šçš„ç›®å½•ï¼‰ï¼Œå¯ä»¥ä½¿ç”¨å¤šä¸ªï¼våšå¤šä¸ªç›®å½•æˆ–æ–‡ä»¶æ˜ å°„ã€‚æ³¨æ„ï¼šæœ€å¥½åšç›®å½•æ˜ å°„ï¼Œåœ¨å®¿ä¸»æœºä¸Šåšä¿®æ”¹ï¼Œç„¶åŽå…±äº«åˆ°å®¹å™¨ä¸Šã€‚
 
--d£ºÔÚrunºóÃæ¼ÓÉÏ-d²ÎÊý,Ôò»á´´½¨Ò»¸öÊØ»¤Ê½ÈÝÆ÷ÔÚºóÌ¨ÔËÐÐ£¨ÕâÑù´´½¨ÈÝÆ÷ºó²»»á×Ô¶¯µÇÂ¼ÈÝÆ÷£¬Èç¹ûÖ»¼Ó-i -tÁ½¸ö²ÎÊý£¬´´½¨ºó¾Í»á×Ô¶¯½øÈ¥ÈÝÆ÷£©¡£
+-dï¼šåœ¨runåŽé¢åŠ ä¸Š-då‚æ•°,åˆ™ä¼šåˆ›å»ºä¸€ä¸ªå®ˆæŠ¤å¼å®¹å™¨åœ¨åŽå°è¿è¡Œï¼ˆè¿™æ ·åˆ›å»ºå®¹å™¨åŽä¸ä¼šè‡ªåŠ¨ç™»å½•å®¹å™¨ï¼Œå¦‚æžœåªåŠ -i -tä¸¤ä¸ªå‚æ•°ï¼Œåˆ›å»ºåŽå°±ä¼šè‡ªåŠ¨è¿›åŽ»å®¹å™¨ï¼‰ã€‚
 
--p£º±íÊ¾¶Ë¿ÚÓ³Éä£¬Ç°ÕßÊÇËÞÖ÷»ú¶Ë¿Ú£¬ºóÕßÊÇÈÝÆ÷ÄÚµÄÓ³Éä¶Ë¿Ú¡£¿ÉÒÔÊ¹ÓÃ¶à¸ö-p×ö¶à¸ö¶Ë¿ÚÓ³Éä
+-pï¼šè¡¨ç¤ºç«¯å£æ˜ å°„ï¼Œå‰è€…æ˜¯å®¿ä¸»æœºç«¯å£ï¼ŒåŽè€…æ˜¯å®¹å™¨å†…çš„æ˜ å°„ç«¯å£ã€‚å¯ä»¥ä½¿ç”¨å¤šä¸ª-påšå¤šä¸ªç«¯å£æ˜ å°„
 
-£¨1£©½»»¥Ê½·½Ê½´´½¨ÈÝÆ÷
+ï¼ˆ1ï¼‰äº¤äº’å¼æ–¹å¼åˆ›å»ºå®¹å™¨
 ```
-docker run -it --name=ÈÝÆ÷Ãû³Æ ¾µÏñÃû³Æ:±êÇ© /bin/bash
+docker run -it --name=å®¹å™¨åç§° é•œåƒåç§°:æ ‡ç­¾ /bin/bash
 ```
-ÕâÊ±ÎÒÃÇÍ¨¹ýpsÃüÁî²é¿´£¬·¢ÏÖ¿ÉÒÔ¿´µ½Æô¶¯µÄÈÝÆ÷£¬×´Ì¬ÎªÆô¶¯×´Ì¬
+è¿™æ—¶æˆ‘ä»¬é€šè¿‡pså‘½ä»¤æŸ¥çœ‹ï¼Œå‘çŽ°å¯ä»¥çœ‹åˆ°å¯åŠ¨çš„å®¹å™¨ï¼ŒçŠ¶æ€ä¸ºå¯åŠ¨çŠ¶æ€
 
-ÍË³öµ±Ç°ÈÝÆ÷
+é€€å‡ºå½“å‰å®¹å™¨
 ```
 exit
 ```
-£¨2£©ÊØ»¤Ê½·½Ê½´´½¨ÈÝÆ÷£º
+ï¼ˆ2ï¼‰å®ˆæŠ¤å¼æ–¹å¼åˆ›å»ºå®¹å™¨ï¼š
 ```
-docker run -di --name=ÈÝÆ÷Ãû³Æ ¾µÏñÃû³Æ:±êÇ©
+docker run -di --name=å®¹å™¨åç§° é•œåƒåç§°:æ ‡ç­¾
 ```
-µÇÂ¼ÊØ»¤Ê½ÈÝÆ÷·½Ê½£º
+ç™»å½•å®ˆæŠ¤å¼å®¹å™¨æ–¹å¼ï¼š
 ```
-docker exec -it ÈÝÆ÷Ãû³Æ (»òÕßÈÝÆ÷ID)  /bin/bash
+docker exec -it å®¹å™¨åç§° (æˆ–è€…å®¹å™¨ID)  /bin/bash
 ```
-### Í£Ö¹ÓëÆô¶¯ÈÝÆ÷
-Í£Ö¹ÈÝÆ÷£º
+### åœæ­¢ä¸Žå¯åŠ¨å®¹å™¨
+åœæ­¢å®¹å™¨ï¼š
 ```
-docker stop ÈÝÆ÷Ãû³Æ£¨»òÕßÈÝÆ÷ID£©
+docker stop å®¹å™¨åç§°ï¼ˆæˆ–è€…å®¹å™¨IDï¼‰
 ```
-Æô¶¯ÈÝÆ÷£º
+å¯åŠ¨å®¹å™¨ï¼š
 ```
-docker start ÈÝÆ÷Ãû³Æ£¨»òÕßÈÝÆ÷ID£©
+docker start å®¹å™¨åç§°ï¼ˆæˆ–è€…å®¹å™¨IDï¼‰
 ```
-### ÎÄ¼þ¿½±´
-Èç¹ûÎÒÃÇÐèÒª½«ÎÄ¼þ¿½±´µ½ÈÝÆ÷ÄÚ¿ÉÒÔÊ¹ÓÃcpÃüÁî
+### æ–‡ä»¶æ‹·è´
+å¦‚æžœæˆ‘ä»¬éœ€è¦å°†æ–‡ä»¶æ‹·è´åˆ°å®¹å™¨å†…å¯ä»¥ä½¿ç”¨cpå‘½ä»¤
 ```
-docker cp ÐèÒª¿½±´µÄÎÄ¼þ»òÄ¿Â¼ ÈÝÆ÷Ãû³Æ:ÈÝÆ÷Ä¿Â¼
+docker cp éœ€è¦æ‹·è´çš„æ–‡ä»¶æˆ–ç›®å½• å®¹å™¨åç§°:å®¹å™¨ç›®å½•
 ```
-Ò²¿ÉÒÔ½«ÎÄ¼þ´ÓÈÝÆ÷ÄÚ¿½±´³öÀ´
+ä¹Ÿå¯ä»¥å°†æ–‡ä»¶ä»Žå®¹å™¨å†…æ‹·è´å‡ºæ¥
 ```
-docker cp ÈÝÆ÷Ãû³Æ:ÈÝÆ÷Ä¿Â¼ ÐèÒª¿½±´µÄÎÄ¼þ»òÄ¿Â¼
+docker cp å®¹å™¨åç§°:å®¹å™¨ç›®å½• éœ€è¦æ‹·è´çš„æ–‡ä»¶æˆ–ç›®å½•
 ```
-### Ä¿Â¼¹ÒÔØ
-ÎÒÃÇ¿ÉÒÔÔÚ´´½¨ÈÝÆ÷µÄÊ±ºò£¬½«ËÞÖ÷»úµÄÄ¿Â¼ÓëÈÝÆ÷ÄÚµÄÄ¿Â¼½øÐÐÓ³Éä£¬ÕâÑùÎÒÃÇ¾Í¿ÉÒÔÍ¨¹ýÐÞ¸ÄËÞÖ÷»úÄ³¸öÄ¿Â¼µÄÎÄ¼þ´Ó¶øÈ¥Ó°ÏìÈÝÆ÷¡£
-´´½¨ÈÝÆ÷ Ìí¼Ó-v²ÎÊý ºó±ßÎª ËÞÖ÷»úÄ¿Â¼:ÈÝÆ÷Ä¿Â¼£¬ÀýÈç£º
+### ç›®å½•æŒ‚è½½
+æˆ‘ä»¬å¯ä»¥åœ¨åˆ›å»ºå®¹å™¨çš„æ—¶å€™ï¼Œå°†å®¿ä¸»æœºçš„ç›®å½•ä¸Žå®¹å™¨å†…çš„ç›®å½•è¿›è¡Œæ˜ å°„ï¼Œè¿™æ ·æˆ‘ä»¬å°±å¯ä»¥é€šè¿‡ä¿®æ”¹å®¿ä¸»æœºæŸä¸ªç›®å½•çš„æ–‡ä»¶ä»Žè€ŒåŽ»å½±å“å®¹å™¨ã€‚
+åˆ›å»ºå®¹å™¨ æ·»åŠ -vå‚æ•° åŽè¾¹ä¸º å®¿ä¸»æœºç›®å½•:å®¹å™¨ç›®å½•ï¼Œä¾‹å¦‚ï¼š
 ```
 docker run -di -v /usr/local/myhtml:/usr/local/myhtml --name=mycentos3 centos:7
 ```
-Èç¹ûÄã¹²ÏíµÄÊÇ¶à¼¶µÄÄ¿Â¼£¬¿ÉÄÜ»á³öÏÖÈ¨ÏÞ²»×ãµÄÌáÊ¾¡£
+å¦‚æžœä½ å…±äº«çš„æ˜¯å¤šçº§çš„ç›®å½•ï¼Œå¯èƒ½ä¼šå‡ºçŽ°æƒé™ä¸è¶³çš„æç¤ºã€‚
 
-ÕâÊÇÒòÎªCentOS7ÖÐµÄ°²È«Ä£¿éselinux°ÑÈ¨ÏÞ½ûµôÁË£¬ÎÒÃÇÐèÒªÌí¼Ó²ÎÊý `¨Cprivileged=true` À´½â¾ö¹ÒÔØµÄÄ¿Â¼Ã»ÓÐÈ¨ÏÞµÄÎÊÌâ
+è¿™æ˜¯å› ä¸ºCentOS7ä¸­çš„å®‰å…¨æ¨¡å—selinuxæŠŠæƒé™ç¦æŽ‰äº†ï¼Œæˆ‘ä»¬éœ€è¦æ·»åŠ å‚æ•° `â€“privileged=true` æ¥è§£å†³æŒ‚è½½çš„ç›®å½•æ²¡æœ‰æƒé™çš„é—®é¢˜
 
-### ²é¿´ÈÝÆ÷IPµØÖ·
-ÎÒÃÇ¿ÉÒÔÍ¨¹ýÒÔÏÂÃüÁî²é¿´ÈÝÆ÷ÔËÐÐµÄ¸÷ÖÖÊý¾Ý
+### æŸ¥çœ‹å®¹å™¨IPåœ°å€
+æˆ‘ä»¬å¯ä»¥é€šè¿‡ä»¥ä¸‹å‘½ä»¤æŸ¥çœ‹å®¹å™¨è¿è¡Œçš„å„ç§æ•°æ®
 ```
-docker inspect ÈÝÆ÷Ãû³Æ£¨ÈÝÆ÷ID£©
+docker inspect å®¹å™¨åç§°ï¼ˆå®¹å™¨IDï¼‰
 ```
-Ò²¿ÉÒÔÖ±½ÓÖ´ÐÐÏÂÃæµÄÃüÁîÖ±½ÓÊä³öIPµØÖ·
+ä¹Ÿå¯ä»¥ç›´æŽ¥æ‰§è¡Œä¸‹é¢çš„å‘½ä»¤ç›´æŽ¥è¾“å‡ºIPåœ°å€
 ```
-docker inspect --format='{{.NetworkSettings.IPAddress}}' ÈÝÆ÷Ãû³Æ£¨ÈÝÆ÷ID£©
+docker inspect --format='{{.NetworkSettings.IPAddress}}' å®¹å™¨åç§°ï¼ˆå®¹å™¨IDï¼‰
 ```
-### É¾³ýÈÝÆ÷
-É¾³ýÖ¸¶¨µÄÈÝÆ÷£º
+### åˆ é™¤å®¹å™¨
+åˆ é™¤æŒ‡å®šçš„å®¹å™¨ï¼š
 ```
-docker rm ÈÝÆ÷Ãû³Æ£¨ÈÝÆ÷ID£©
+docker rm å®¹å™¨åç§°ï¼ˆå®¹å™¨IDï¼‰
 ```
-É¾³ýËùÓÐÈÝÆ÷
+åˆ é™¤æ‰€æœ‰å®¹å™¨
 ```
 docker rm `docker ps -a -q`
 ```
