--- a/_posts/2020-6-1-Docker常用命令.md
+++ b/_posts/2020-6-1-Docker常用命令.md
@@ -144,7 +144,7 @@ docker inspect 容器名称（容器ID）
 ```
 也可以直接执行下面的命令直接输出IP地址
 ```
-docker inspect --format='{{.NetworkSettings.IPAddress}}' 容器名称（容器ID）
+docker inspect --format=\'{{.NetworkSettings.IPAddress}}\' 容器名称（容器ID）
 ```
 ### 删除容器
 删除指定的容器：
