--- a/_posts/2020-6-22-Nginx的常用的命令及配置.md
+++ b/_posts/2020-6-22-Nginx的常用的命令及配置.md
@@ -54,25 +54,25 @@ ps -ef|grep nginx
 cd /usr/local/nginx/conf/nginx.conf
 ```
 
-<div style="width:780px;height:250px;margin:50px auto">
-    <img alt="nginx-conf.png" src="/images/nginx-conf.png" width="780" height="250"/>
+<div style="width:780px;height:180px;margin:50px auto">
+    <img alt="nginx-conf.png" src="/images/nginx-conf.png" width="780" height="180"/>
 </div>
 
 2、配置文件中的内容
 
 包含三部分内容
 
->（1）全局块：配置服务器整体运行的配置指令
+（1）全局块：配置服务器整体运行的配置指令
 
->>比如 worker_processes 1;处理并发数的配置
+比如 worker_processes 1;处理并发数的配置
 
->（2）events 块：影响 Nginx 服务器与用户的网络连接
+（2）events 块：影响 Nginx 服务器与用户的网络连接
 
->>比如 worker_connections 1024; 支持的最大连接数为 1024
+比如 worker_connections 1024; 支持的最大连接数为 1024
 
->（3）http 块
+（3）http 块
 
->>还包含两部分：http 全局块server 块
+还包含两部分：http 全局块server 块
 
 详细配置说明如下：
 
