--- a/_posts/2020-8-14-使用Jmeter进行压力测试的配置和使用.md
+++ b/_posts/2020-8-14-使用Jmeter进行压力测试的配置和使用.md
@@ -26,7 +26,7 @@ Jmeter的使用需要java环境，需要先下载安装jdk；
 **创建线程组**
 
 <div style="width:500px;height:300px;margin:50px auto;">
-    <img alt="jmeter-thread.png" src="jmeter-thread.png" width="500" height="300"/>
+    <img alt="jmeter-thread.png" src="/images/jmeter-thread.png" width="500" height="300"/>
 </div>
 
 右键测试计划——>添加——>Threads(Users)——>线程组
@@ -34,13 +34,13 @@ Jmeter的使用需要java环境，需要先下载安装jdk；
 **配置线程组**
 
 <div style="width:500px;height:300px;margin:50px auto;">
-    <img alt="jmeter-thread-config.png" src="jmeter-thread-config.png" width="500" height="300"/>
+    <img alt="jmeter-thread-config.png" src="/images/jmeter-thread-config.png" width="500" height="300"/>
 </div>
 
 **创建HTTP请求**
 
 <div style="width:500px;height:300px;margin:50px auto;">
-    <img alt="jmeter-http.png" src="jmeter-http.png" width="500" height="300"/>
+    <img alt="jmeter-http.png" src="/images/jmeter-http.png" width="500" height="300"/>
 </div>
 
 右键线程组——>添加——>Sampler——>HTTP请求
@@ -48,13 +48,13 @@ Jmeter的使用需要java环境，需要先下载安装jdk；
 **配置HTTP请求**
 
 <div style="width:500px;height:300px;margin:50px auto;">
-    <img alt="jmeter-http-config.png" src="jmeter-http-config.png" width="500" height="300"/>
+    <img alt="jmeter-http-config.png" src="/images/jmeter-http-config.png" width="500" height="300"/>
 </div>
 
 **创建响应断言**
 
 <div style="width:500px;height:300px;margin:50px auto;">
-    <img alt="jmeter-predicate.png" src="jmeter-predicate.png" width="500" height="300"/>
+    <img alt="jmeter-predicate.png" src="/images/jmeter-predicate.png" width="500" height="300"/>
 </div>
 
 右键HTTP请求——>添加——>断言——>响应断言
@@ -62,13 +62,13 @@ Jmeter的使用需要java环境，需要先下载安装jdk；
 **配置响应断言**
 
 <div style="width:500px;height:300px;margin:50px auto;">
-    <img alt="jmeter-predicate-config.png" src="jmeter-predicate-config.png" width="500" height="300"/>
+    <img alt="jmeter-predicate-config.png" src="/images/jmeter-predicate-config.png" width="500" height="300"/>
 </div>
 
 **创建聚合报告和查看结果树**
 
 <div style="width:500px;height:300px;margin:50px auto;">
-    <img alt="jmeter-polymerization.png" src="jmeter-polymerization.png" width="500" height="300"/>
+    <img alt="jmeter-polymerization.png" src="/images/jmeter-polymerization.png" width="500" height="300"/>
 </div>
 
 配置完成以后可点击启动进行压测
