--- a/_posts/2020-8-14-使用Jmeter进行压力测试的配置和使用.md
+++ b/_posts/2020-8-14-使用Jmeter进行压力测试的配置和使用.md
@@ -29,7 +29,7 @@ Jmeter的使用需要java环境，需要先下载安装jdk；
     <img alt="jmeter-thread.png" src="/images/jmeter-thread.png" width="700" height="400"/>
 </div>
 
-右键测试计划——>添加——>Threads(Users)——>线程组
+右键测试计划->添加->Threads(Users)->线程组
 
 **配置线程组**
 
@@ -43,7 +43,7 @@ Jmeter的使用需要java环境，需要先下载安装jdk；
     <img alt="jmeter-http.png" src="/images/jmeter-http.png" width="700" height="400"/>
 </div>
 
-右键线程组——>添加——>Sampler——>HTTP请求
+右键线程组->添加->Sampler->HTTP请求
 
 **配置HTTP请求**
 
@@ -57,7 +57,7 @@ Jmeter的使用需要java环境，需要先下载安装jdk；
     <img alt="jmeter-predicate.png" src="/images/jmeter-predicate.png" width="700" height="400"/>
 </div>
 
-右键HTTP请求——>添加——>断言——>响应断言
+右键HTTP请求->添加->断言->响应断言
 
 **配置响应断言**
 
