--- a/_posts/2021-12-22-EASY-SSO使用说明.md
+++ b/_posts/2021-12-22-EASY-SSO使用说明.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "EASY-SSO使用说明"
+title: "EASY-SSO 使用说明"
 date: 2020-12-1
 categories: 分布式
 tags: SringBoot SSO
 --- 
 
 <div style="margin:30px 0px;">
-   EASY-SSO gitee地址 <a href="https://gitee.com/xmingtx/easy-sso</a>
+    <a href="https://gitee.com/xmingtx/easy-sso>EASY-SSO gitee地址</a>
 </div>
 
 
