--- a/_posts/2021-12-22-EASY-SSO使用说明.md
+++ b/_posts/2021-12-22-EASY-SSO使用说明.md
@@ -7,7 +7,7 @@ tags: SringBoot SSO
 --- 
 
 <div style="margin:30px 0px;">
-    <a href="https://gitee.com/xmingtx/easy-sso>EASY-SSO gitee地址</a>
+    EASY-SSO gitee地址 <a href="https://gitee.com/xmingtx/easy-sso">https://gitee.com/xmingtx/easy-sso</a>
 </div>
 
 
