--- a/_posts/2021-12-22-EASY-SSO使用说明.md
+++ b/_posts/2021-12-22-EASY-SSO使用说明.md
@@ -30,7 +30,7 @@ tags: SringBoot SSO
 
 1. 在pom.xml文件中添加如下依赖：
 
-```
+```xml
 <dependency>
     <groupId>com.mk</groupId>
     <artifactId>easy-sso-springboot-starter</artifactId>
@@ -40,7 +40,7 @@ tags: SringBoot SSO
 
 2. 在启动类上添加`@EnableSso`注解，如下：
 
-```
+```java
 @EnableSso
 @SpringBootApplication
 public class SsoClientApplication {
@@ -53,7 +53,7 @@ public class SsoClientApplication {
 
 3. 在application.yml配置文件中添加如下配置：
 
-```
+```yaml
 easy:
   sso:
     client:
@@ -90,7 +90,7 @@ easy:
 
 1. 在pom.xml文件中添加如下依赖：
 
-```
+```xml
 <dependency>
     <artifactId>easy-sso-sdk</artifactId>
     <groupId>com.mk</groupId>
@@ -100,7 +100,7 @@ easy:
 
 2. 在web.xml中添加如下配置：
 
-```
+```xml
 <filter>
     <filter-name>SsoWebFilter</filter-name>
     <filter-class>com.mk.sso.sdk.filter.SsoAuthenticationFilter</filter-class>
@@ -117,7 +117,7 @@ easy:
 
 3. 在easy-sso-sdk模块的resources目录下复制一份easy-sso-client.xml文件到客户端服务的resources目录下，配置如下：
 
-```
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE easysso [
         <!ELEMENT easysso (clientType+,ignoreUrls?,ignoreResources?,ssoServer+,logoutUrl+,loginUrl+,ajaxFailureResponse?, jedisConfig?)>
