--- a/_posts/2021-12-22-EASY-SSO使用说明.md
+++ b/_posts/2021-12-22-EASY-SSO使用说明.md
@@ -3,7 +3,7 @@ layout: post
 title: "EASY-SSO 使用说明"
 date: 2020-12-1
 categories: 分布式
-tags: SringBoot SSO
+tags: SpringBoot SSO
 --- 
 
 <div style="margin:30px 0px;">
