--- a/_posts/2021-12-23-自定义消息异常提醒插件.md
+++ b/_posts/2021-12-23-自定义消息异常提醒插件.md
@@ -72,4 +72,6 @@ public String test(){
 ```
 ### 异常报警详细信息如下
 
-![异常信息](/demo.png)
+<div style="width:1234px;height:574px;margin:10px auto">
+    <img alt="spring-boot-starter-exnotice.png" src="/images/spring-boot-starter-exnotice.png" width="1234" height="574"/>
+</div>
