--- a/_posts/2021-12-23-自定义异常消息提醒插件.md
+++ b/_posts/2021-12-23-自定义异常消息提醒插件.md
@@ -18,7 +18,7 @@ tags: SpringBoot
 
 1. 在pom.xml文件中添加如下依赖：
 
-```
+```xml
 <dependency>
     <groupId>com.mk</groupId>
     <artifactId>spring-boot-starter-exnotice</artifactId>
@@ -28,7 +28,7 @@ tags: SpringBoot
 
 2. 在启动类上添加`@EnableExceptionNotice`注解，如下：
 
-```
+```java
 @EnableExceptionNotice
 @SpringBootApplication
 public class SsoClientApplication {
@@ -41,7 +41,7 @@ public class SsoClientApplication {
 
 3. 在application.yml配置文件中添加如下配置：
 
-```
+```yaml
 spring:
   mail:
     host: smtp.163.com
@@ -59,7 +59,7 @@ exception:
 
 4. 在需要监听的控制类或者方法上面添加`@ExceptionListener`注解，如下：
 
-```
+```java
 @GetMapping("/test")
 @ExceptionListener
 public String test(){
