--- a/_posts/2021-12-30-自定义注解实现Restful接口版本管理.md
+++ b/_posts/2021-12-30-自定义注解实现Restful接口版本管理.md
@@ -8,7 +8,7 @@ tags: SpringBoot
 
 在我们的日常开发中，需求总是变化的。对于某个接口，随着需求的升级，也面临里面逻辑的变化。例如，对于/v1/hello,/v2/hello 两个请求，若存在相应的映射，则对应入座。否则都映射到最新的接口上。则映射到最新的接口上。此时，我们又想保持以前的接口还保留，那么我们此时需要做的事，把对接口的请求都映射到最新的接口上，而原来的接口请求还是映射原来的接口上。我在这里介绍用自定义注解的形式，在@RequestMapping()的映射原理上做文章。
 
-## 1.定义版本注解
+### 1.定义版本注解
 
 ```java
 @Target({ElementType.METHOD, ElementType.TYPE})
@@ -20,7 +20,7 @@ public @interface ApiVersion {
 }
 ```
 
-## 2.自定义HandlerMapping
+### 2.自定义HandlerMapping
 
 ```java
 public class CustomRequestMappingHandlerMapping extends RequestMappingHandlerMapping {
@@ -51,7 +51,7 @@ public class CustomRequestMappingHandlerMapping extends RequestMappingHandlerMap
   ②处构建类级的映射要求，`AnnotationUtils.findAnnotatio`n根据在方法上面的注解实例化一个注解类。然后构造RequestCondition。
 `AnnotationUtils.findAnnotation`是用到Spring的工具类，根据标注的注解识别注解。很方便，比通过反射的方式来找到注解要方便。
 
-## 3.自定义条件匹配
+### 3.自定义条件匹配
 
 ```java
 public class ApiVersionCondition implements RequestCondition<ApiVersionCondition> {
@@ -97,7 +97,7 @@ public class ApiVersionCondition implements RequestCondition<ApiVersionCondition
 ```
 getMatchingCondition()利用正则表达式把请求路径中的/v1/hello中的1（版本号）找出来，然后返回与大于等于1的条件类。那么@RequestMapping则路由到产生该条件类的方法下。
 
-## 测试
+### 测试
 
 定义几个接口，用于区分不同的版本，如下：
 
