--- a/_posts/2021-12-30-自定义注解实现接口版本管理(Header传递版本号).md
+++ b/_posts/2021-12-30-自定义注解实现接口版本管理(Header传递版本号).md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "自定义注解实现接口版本管理(Header中设置版本)"
+title: "自定义注解实现接口版本管理(Header传递版本号)"
 date: 2021-12-30
 categories: 分布式
 tags: SpringBoot
 --- 
 
 
-## 1.定义版本注解
+### 1.定义版本注解
 
 ```java
 @Target({ElementType.METHOD, ElementType.TYPE})
@@ -19,7 +19,7 @@ public @interface ApiVersion {
 }
 ```
 
-## 2.自定义HandlerMapping
+### 2.自定义HandlerMapping
 
 ```java
 public class CustomRequestMappingHandlerMapping extends RequestMappingHandlerMapping {
@@ -50,7 +50,7 @@ public class CustomRequestMappingHandlerMapping extends RequestMappingHandlerMap
   ②处构建类级的映射要求，`AnnotationUtils.findAnnotatio`n根据在方法上面的注解实例化一个注解类。然后构造RequestCondition。
 `AnnotationUtils.findAnnotation`是用到Spring的工具类，根据标注的注解识别注解。很方便，比通过反射的方式来找到注解要方便。
 
-## 3.自定义条件匹配
+### 3.自定义条件匹配
 
 ```java
 public class ApiVersionCondition implements RequestCondition<ApiVersionCondition> {
@@ -108,7 +108,7 @@ public class ApiVersionCondition implements RequestCondition<ApiVersionCondition
 }
 ```
 
-## 测试
+### 测试
 
 定义几个接口，用于区分不同的版本，如下：
 
