--- a/_posts/2021-12-30-自定义注解实现Restful接口版本管理.md
+++ b/_posts/2021-12-30-自定义注解实现Restful接口版本管理.md
@@ -1,8 +1,8 @@
----
 layout: post
 title: "自定义注解实现Restful接口版本管理"
 date: 2021-12-30
 categories: 分布式
+
 tags: SpringBoot
 --- 
 
@@ -95,7 +95,27 @@ public class ApiVersionCondition implements RequestCondition<ApiVersionCondition
     }
 }
 ```
+
 getMatchingCondition()利用正则表达式把请求路径中的/v1/hello中的1（版本号）找出来，然后返回与大于等于1的条件类。那么@RequestMapping则路由到产生该条件类的方法下。
+
+### 4.自定义条件匹配
+
+最后则是需要将我们的 HandlerMapping 注册到 Spring MVC 容器，在这里我们借助WebMvcConfigurationSupport来手动注册，如下：
+
+```java
+@Configuration
+public class WebMvcConfig extends WebMvcConfigurationSupport {
+
+    @Override
+    @Bean
+    public RequestMappingHandlerMapping requestMappingHandlerMapping() {
+        RequestMappingHandlerMapping handlerMapping = new CustomRequestMappingHandlerMapping();
+        handlerMapping.setOrder(0);
+        handlerMapping.setInterceptors(getInterceptors());
+        return handlerMapping;
+    }
+}
+```
 
 ### 测试
 
