--- a/_posts/2021-12-30-自定义注解实现接口版本管理(Header传递版本号).md
+++ b/_posts/2021-12-30-自定义注解实现接口版本管理(Header传递版本号).md
@@ -108,6 +108,25 @@ public class ApiVersionCondition implements RequestCondition<ApiVersionCondition
 }
 ```
 
+### 4.自定义条件匹配
+
+最后则是需要将我们的 HandlerMapping 注册到 Spring MVC 容器，在这里我们借助WebMvcConfigurationSupport来手动注册，如下：
+
+```java
+@Configuration
+public class WebMvcConfig extends WebMvcConfigurationSupport {
+
+    @Override
+    @Bean
+    public RequestMappingHandlerMapping requestMappingHandlerMapping() {
+        RequestMappingHandlerMapping handlerMapping = new CustomRequestMappingHandlerMapping();
+        handlerMapping.setOrder(0);
+        handlerMapping.setInterceptors(getInterceptors());
+        return handlerMapping;
+    }
+}
+```
+
 ### 测试
 
 定义几个接口，用于区分不同的版本，如下：
