--- a/_posts/2022-01-06-数据库敏感字段加解密.md
+++ b/_posts/2022-01-06-数据库敏感字段加解密.md
@@ -3,7 +3,7 @@ layout: post
 title: "数据库敏感字段加解密"
 date: 2022-01-06
 categories: 数据库
-tags: MySQL MyBatis
+tags: MySQL Mybatis
 --- 
 
 为了保护数据库敏感字段数据安全，有时候我们需要将敏感数据加密入库，查询时再解密成明文。我们可以利用Mybatis自定义TypeHandler来处理，下面我们来具体实现一下。
