--- a/_posts/2022-03-10-利用Mybatis拦截器实现数据权限.md
+++ b/_posts/2022-03-10-利用Mybatis拦截器实现数据权限.md
@@ -397,11 +397,11 @@ public class SalariesService extends ServiceImpl<SalariesMapper, Salaries> {
 
 启动服务，执行相关操作，sql在执行之前会执行`DataScopeInterceptor`拦截器中的逻辑，从而改变sql，具体的
 
-相关操作就是将原来的sql语句`origSql`在外层包装一层过滤条件，如：`select * from (`origSql)  过滤条件`，
+相关操作就是将原来的sql语句`origSql`在外层包装一层过滤条件，如：`select * from (origSql)`  过滤条件`，
 
 此处的过滤条件要封装到`DataScope`对象中，例如：`dataScope.setSqlCondition("s where 1=1 and `
 
-`s.emp_no = '10001'")` ， 那么在经过拦截器处理以后要执行的sql语句为 ``select * from (`origSql) s where 
+`s.emp_no = '10001'")` ， 那么在经过拦截器处理以后要执行的sql语句为 `select * from (origSql) s where 
 
 1=1 and s.emp_no = '10001'`, 从而实现数据权限相操作，当然此处的过滤条件只是为了演示效果举的一个例子
 
