--- a/_posts/2022-03-10-利用Mybatis拦截器实现数据权限.md
+++ b/_posts/2022-03-10-利用Mybatis拦截器实现数据权限.md
@@ -397,7 +397,7 @@ public class SalariesService extends ServiceImpl<SalariesMapper, Salaries> {
 
 启动服务，执行相关操作，sql在执行之前会执行`DataScopeInterceptor`拦截器中的逻辑，从而改变sql，具体的
 
-相关操作就是将原来的sql语句`origSql`在外层包装一层过滤条件，如：`select * from (origSql)`  过滤条件`，
+相关操作就是将原来的sql语句`origSql`在外层包装一层过滤条件，如：`select * from (origSql)`  过滤条件，
 
 此处的过滤条件要封装到`DataScope`对象中，例如：`dataScope.setSqlCondition("s where 1=1 and `
 
