--- a/_posts/2022-03-10-利用Mybatis拦截器实现数据权限.md
+++ b/_posts/2022-03-10-利用Mybatis拦截器实现数据权限.md
@@ -401,9 +401,9 @@ public class SalariesService extends ServiceImpl<SalariesMapper, Salaries> {
 
 此处的过滤条件要封装到`DataScope`对象中，例如：`dataScope.setSqlCondition("s where 1=1 and `
 
-`s.emp_no = '10001'")` ， 那么在经过拦截器处理以后要执行的sql语句为 `select * from (origSql) s where 
+`s.emp_no = '10001'")` ， 那么在经过拦截器处理以后要执行的sql语句为 
 
-1=1 and s.emp_no = '10001'`, 从而实现数据权限相操作，当然此处的过滤条件只是为了演示效果举的一个例子
+`select * from (origSql) s where 1=1 and s.emp_no = '10001'`, 从而实现数据权限相操作，当然此处的过滤条件只是为了演示效果举的一个例子
 
 而已，在实际开发过程中要根据用户角色等等设置具体的过滤条件。
 
