--- a/_posts/2022-03-17-排序算法.md
+++ b/_posts/2022-03-17-排序算法.md
@@ -9,7 +9,7 @@ tags:  算法
 
 
 
-以下手撸了几个排序算法（冒泡排序、直接插入排序、直接选择排序、快速排序），方便日后用到，特此记录一下，以下为具体的实现：
+大学学的各种排序算法都忘光了，也就仅记住了个冒泡算法，最近又学习了一下各个排序算法的思路，所以就按照思路实现了以下几个排序算法（冒泡排序、直接插入排序、直接选择排序、快速排序），方便日后用到，特此记录一下，以下为具体的实现：
 
 
 
