--- a/_posts/2023-08-21-表单数据通用导出Excel.md
+++ b/_posts/2023-08-21-表单数据通用导出Excel.md
@@ -33,19 +33,20 @@ public @interface ExcelAttribute {
 **2、自定义类型格式化Handler**
 
 ```java
-import com.glodon.jjfab.cloud.util.DateUtils;
 import java.util.Date;
 import java.util.Objects;
-import static com.glodon.jjfab.cloud.util.DateUtils.DATE_FORMAT_YMD;
+
 
 public class DateTypeHandler implements ExportTypeHandler{
+    
+    private static final String DATE_FORMAT = "yyyy-MM-dd";
 
     @Override
     public String getValue(Object value) throws Exception {
         if (Objects.isNull(value) || !(value instanceof Date)) {
             return "";
         } else {
-            return DateUtils.format((Date) value, DATE_FORMAT_YMD);
+            return DateUtils.format((Date) value, DATE_FORMAT);
         }
     }
 
@@ -184,43 +185,40 @@ private static final String ROW_NUMBER_ALIAS = "序号";
 
 ```java
 @Data
-public class BusinessRegistryDTO {
+public class PersonDTO {
 
 /**
 
- * 签约法人
+ * 名称
    */
-   @ExcelAttribute(name = "签约法人", sort = 1)
-   @NotEmpty(groups = {Insert.class, Update.class})
-   private String signLegalPerson;
+   @ExcelAttribute(name = "名称", sort = 1)
+   private String name;
 
 /**
 
- * 主管单位
+ * 年龄
    */
-   @ExcelAttribute(name = "主管单位", sort = 2)
-   @NotEmpty(groups = {Insert.class, Update.class})
-   private String managerUnitName;
+   @ExcelAttribute(name = "年龄", sort = 2)
+   private Integer age;
 
 /**
 
- * 预估签约日期
+ * 生日
    */
-   @ExcelAttribute(name = "预估签约日期", sort = 3, typeHandler = DateTypeHandler.class)
-   private Date estimateTime;
+   @ExcelAttribute(name = "生日", sort = 3, typeHandler = DateTypeHandler.class)
+   private Date birthday;
 
 }
 ```
-
 
 `ExcelAttribute`注解的`name`属性指定字段别名，通过`sort`属性指定字段先后顺序，若字段需要格式化通过`typeHandler` 属性指定要格式化的类，已经提供`DateTypeHandler`，扩展需实现`ExportTypeHandler`接口
 
 **5、导出调用**
 
 ```java
-public void exportExcel(HttpServletRequest request, HttpServletResponse response, BusinessRegistryParam param) {
-    List<BusinessRegistryDTO> list = baseMapper.queryList(param);
-    exportExcel(request, response, "经营台账", list);
+public void exportExcel(HttpServletRequest request, HttpServletResponse response, PageParam param) {
+    List<PersonDTO> list = baseMapper.queryList(param);
+    exportExcel(request, response, "XXXX", list);
 }
 ```
 
